-feat: use initials for user account button' -style: increase line height to prevent cutting off Accented characters

--- a/src/encoded/static/scss/encoded/modules/_navbar.scss
+++ b/src/encoded/static/scss/encoded/modules/_navbar.scss
@@ -435,6 +435,7 @@ div.navbar-fixed-top {
                                         color: black;
                                         font-weight: 500;
                                         margin: auto 12px auto 13px;
+                                        line-height: 30px;
                                     }
 
                                     &:hover {
